--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<DOCTYPE! html>
+ 
+<head>
+ <link href="./main/stylesheet.css" type="text/css" rel="stylesheet">
+ <title>Eylin's Portfolio</tile>
+</head>
+ 
 <html>
  
 <body>
