--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <head>
  <link href="./main/stylesheet.css" type="text/css" rel="stylesheet">
- <title>Eylin's Portfolio</tile>
+ <title>Eylin's Portfolio</title>
 </head>
  
 <html>
